--- a/IntrinsicFunctions_Sub.yaml
+++ b/IntrinsicFunctions_Sub.yaml
@@ -68,7 +68,7 @@ Resources:
         - Key: Name
           Value: !Sub 'prefix-${Env}-bucket' #Will create the same string for the tag, but looks a lot closer to the final string.
           
-    #Warning: Supposedly this works, ended up not being able to test it.
+    #This one caused me some confusion, the thing is you have to put the "Fn::ImportValue" on the line below the property, once indented.
     ResourceImportValue:
       Type: AWS::S3::Bucket
       Properties:
